--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,8 @@ body {
     background-color: #d9dcd6;
 }
 
+/*Removed the '.header' class and replaced with a header selector 
+to match the HTML code*/
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -43,6 +45,7 @@ p {
     font-size: 16px;
 }
 
+/*Changed the '.hero' class to the 'meeting' id after linking the image in HTML*/
 #meeting {
     height: 800px;
     width: 100%;
@@ -67,6 +70,30 @@ p {
     margin-left: 20px;
 }
 
+/*Deleted unnecessary CSS class attributes to consolidate content into single
+CSS selectors*/
+.header {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.header img {
+    max-height: 200px;
+}
+
+.heading {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/*Created a 'sidebar' class to separate the side content from the
+main content, also encompassing the needed images and text for its section,
+modified certain percentages for a more streamlined and seamless design,
+and renamed class attributes for a more easily identifiable CSS selectors*/
 .sidebar {
     margin-right: 20px;
     padding: 20px;
@@ -89,24 +116,6 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.header {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.header img {
-    max-height: 200px;
-}
-
-.heading {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .footer {
